Remove links from Topic 3 in index.html - Spring 2023

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/youtube.rar">YouTube Data API Sample Code</a></li>
 <li><a href="/courses/MIS510/yelpsample.rar">Yelp API Sample Code</a></li>
 
-</ol></ol><h3>TOPIC 3: Data Mining (Machine Learning, Deep Learning, AI)</h3>
+</ol></ol><h3>TOPIC 3: Data Mining and Machine Learning</h3>
 <ol>
 <li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/publicly_available_datasets_hz_updated.pptx">Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
@@ -258,7 +258,6 @@ a:link,a:visited {
 <li>Introduction to Support Vector Machine (SVM) and Conditional Random Field (CRF) (<a href="/courses/MIS510/mis510_2009spring_svm_and_crf.ppt">Long Version</a>, <a href="/courses/MIS510/mis510_2009spring_svm_and_crf_short.ppt">Short Version</a>)</li>
 <li><a href="/courses/resources/gibney_2016_google_masters_go.pdf" target="_blank">Google masters Go</a> (Nature, Elizabeth Gibney, January 28, 2016)</li>
 <li><a href="/courses/resources/the_economist_-_artificial_intelligence_and_go_showdown.pdf" target="_blank">Artificial Intelligence Go Showdown</a> (The Economist, March 12, 2016)</li>
-<li><a href="/courses/resources/million-dollar_babies_the_economist.pdf" target="_blank">Artificial Intelligence - Million Dollar Babies</a> - The Economist, April 2, 2016</li>
 <li><a href="/courses/resources/mastering_the_game_of_go_with_deep_neural_networks_and_tree_search.pdf" target="_blank">Mastering the game of Go with deep neural networks and tree search</a> (Nature, Silver et al., 2016)</li>
 <li><a href="/courses/resources/the_malicious_use_of_artificial_intelligence_-_forecaseting_prevention_and_mitigation.pdf" target="_blank">The Malicious Use of Artificial Intelligence: Forecasting, Prevention, and Mitigation</a>, by Miles Brundage et al., February 2018.</li>
 <li><a href="/courses/resources/deep_learning_lecun_et_al_2015.pdf" target="_blank">Deep Learning</a> (Nature, LeCun et al., 2015)</li>
