Adding papers to Topic 4: DL & AI

--- a/index.html
+++ b/index.html
@@ -274,6 +274,13 @@ a:link,a:visited {
 <li><a href="/courses/resources/chai_wf_deep_generative_models.pptx" target="_blank">Deep Generative Models: An Overview</a> (Yidong Chai, Weifeng Li, and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/artificial_intelligence_and_deep_learning_lee_giles.ppt" target="_blank">Artificial Intelligence and Deep Learning</a> (Lee Giles, 2018)</li>
 <li><a href="/courses/resources/representation_learning_lee_giles.pptx" target="_blank">Representation Learning</a> (Alexander G. Ororbia II and Lee Giles, 2018)</li>
+<li><a href="/courses/resources/Attention_Vaswani_2017.pdf" target="_blank">Attention Is All You Need</a> (Vaswani et al., NeurIPS, 2017)</li>
+<li><a href="/courses/resources/GPT-2_Radford_2018.pdf" target="_blank">GPT-2</a> (Radford et al., OpenAI, 2018)</li>
+<li><a href="/courses/resources/BERT_Devlin_2019.pdf" target="_blank">BERT</a> (Devlin et al., NAACL, 2019)</li>
+<li><a href="/courses/resources/GPT3_Brown_2020.pdf" target="_blank">GPT-3</a> (Brown et al., NeurIPS, 2020)</li>
+<li><a href="/courses/resources/SimCLR_Chen_2020.pdf" target="_blank">SimCLR</a> (Chen et al., ICML, 2020)</li>
+<li><a href="/courses/resources/DALL-E_Ramesh_2021.pdf" target="_blank">DALL-E</a> (Ramesh et al., ICML, 2021)</li>
+<li><a href="/courses/resources/Foundation_Models_Stanford_July_2022.pdf" target="_blank">Foundation Models</a> (Bommasani et al., Stanford, 2022)</li>
 </ol>
 
 <h3>TOPIC 5: Text Mining (Sentiment Analysis, Topic Modeling, Visualization)</h3>
