Add slides to Topic 4: DL & AI

--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@ a:link,a:visited {
 <li><a href="/courses/resources/SimCLR_Chen_2020.pdf" target="_blank">SimCLR</a> (Chen et al., ICML, 2020)</li>
 <li><a href="/courses/resources/DALL-E_Ramesh_2021.pdf" target="_blank">DALL-E</a> (Ramesh et al., ICML, 2021)</li>
 <li><a href="/courses/resources/Foundation_Models_Stanford_July_2022.pdf" target="_blank">Foundation Models</a> (Bommasani et al., Stanford, 2022)</li>
+<li><a href="/courses/resources/AI-enabled_Analytics_Bootcamp_WelcomeSlides.pptx" target="_blank">Introduction to AI-enabled Analytics Bootcamp</a> (Sagar Samtani 2022)</li>
+<li><a href="/courses/resources/AI-enabled_Analytics_Research_Bootcamp.pptx" target="_blank">Research Bootcamp: Conducting AI-enabled Analytics</a> (Sagar Samtani 2022)</li>
+<li><a href="/courses/resources/Samtani_Open_Source_Tools_Repository_for_AI-enabled_Analytics.pptx" target="_blank">AI-enabled Analytics: A Brief Overview and An Open-Source Tools Inventory</a> (Sagar Samtani 2022)</li>
 </ol>
 
 <h3>TOPIC 5: Text Mining (Sentiment Analysis, Topic Modeling, Visualization)</h3>
