Correct Topic 4 title

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/science_machine_learning_july_2015.pdf" target="_blank">Machine Learning: Trends, Perspectives, and Prospects</a> (Science, Jordan and Mitchell, 2015)</li>
 </ol>
 
-<h3>TOPIC 4: Deep Learning & AI</h3>
+<h3>TOPIC 4: Deep Learning & Artificial Intelligence</h3>
 <ol><li>The Economist, Special Report, AI in Business, March 31, 2018: <a href="/courses/resources/economist_ai_in_business.pdf" target="_blank">GrAIt Expectations</a>. Includes the following sections:</li>
 <ol><li>In algorithms we trust</li>
 <li>Here to help</li>
