Corrected closing </ol> tag in Topic 2

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ a:link,a:visited {
 <li>Communications of the ACM (2011):</li>
 <ol><li><a href="/courses/MIS510/reflecting_on_the_darpa_red_balloon_challenge.pdf" target="_blank">Reflecting on the DARPA Red Balloon Challenge</a>, by John C. Tang et al. (April 2011)</li>
 <li><a href="/courses/MIS510/crowdsourcing_systems_on_the_world-wide_web.pdf" target="_blank">Crowdsourcing Systems on the World-Wide Web</a>, by Anhai Doan et al. (April 2011)</li>
-<li><a href="/courses/resources/netflix_recommender_system_tmis_2015.pdf" target="_blank">The Netflix Recommender System: Algorithms, Business Value, and Innovation</a> (Uribe and Hunt, 2015)</li>
+</ol><li><a href="/courses/resources/netflix_recommender_system_tmis_2015.pdf" target="_blank">The Netflix Recommender System: Algorithms, Business Value, and Innovation</a> (Uribe and Hunt, 2015)</li>
 <li><a href="/courses/resources/recommender-systems-netflix.pdf" target="_blank">Matrix Factorization Techniques for Recommender Systems</a> (Koren, Bell, and Volinsky, 2009)</li>
 <li>Harvard Business Review (October 2012)</li>
 <ol><li><a href="/courses/MIS510/big_data_-_the_management_revolution_0.pdf" target="_blank">Big Data: The Management Revolution </a>(from HBR 12/12)</li>
@@ -216,7 +216,8 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/youtube.rar">YouTube Data API Sample Code</a></li>
 <li><a href="/courses/MIS510/yelpsample.rar">Yelp API Sample Code</a></li>
 
-</ol></ol><h3>TOPIC 3: Data Mining and Machine Learning</h3>
+</ol></ol>
+<h3>TOPIC 3: Data Mining and Machine Learning</h3>
 <ol>
 <li><a href="/courses/resources/PredictiveAnalyticsForDataMining2020.pptx">Predictive Analytics for Data Mining</a> (Weifeng Li, Sagar Samtani, Hsinchun Chen, 2020)</li>
 <li><a href="/courses/resources/publicly_available_datasets_hz_updated.pptx">Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
