Listing new papers in index.html under Topic 1

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ a:link,a:visited {
 <li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008, MISQ</li>
 <li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010, MISQ</li>
 <li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019, MISQ</li>
+<li><a href="/courses/resources/Ebrahimi_MISQ_2022.pdf" target="_blank">Cross-Lingual Cybersecurity Analytics in the International Dark Web with Adversarial Deep Representation Learning</a>, by Reza Ebrahimi, Yidong Chai, Sagar Samtani, and Hsinchun Chen, June 2022, MISQ</li>
+<li><a href="/courses/resources/Samtani_MISQ_2022.pdf" target="_blank">Linking Exploits from the Dark Web to Known Vulnerabilities for Proactive Cyber Threat Intelligence: An Attention-based Deep Structured Semantic Model</a>, by Sagar Samtani, Yidong Chai, and Hsinchun Chen, June 2022, MISQ</li>
 </ol>
 
 <li>Smart Health</li>
@@ -78,7 +80,9 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/6c-globalsurveillance-2009.pdf" target="_blank">AI for Global Disease Surveillance</a>, by Hsinchun Chen and Daniel Zeng (November/December 2009), IEEE IS</li>
 <li><a href="/courses/MIS611D/ieee-is-lin-2014.pdf" target="_blank">Time-To-Event Predictive Modeling for Chronic Conditions Using Electronic Health Records</a>, by Yu-Kai Lin, Hsinchun Chen, Randall A. Brown, Shu-Hsing Li, and Hung-Jen Yang (2014), JBI</li>
 <li><a href="/courses/resources/lin_et_al_bmtl_2017_misq.pdf" target="_blank">Healthcare Predictive Analytics for Risk Profiling in Chronic Care: A Bayesian Multitask Learning Approach</a>, by Yu-Kai Lin et al., 2017, MISQ</li>
-<li><a href="/courses/resources/misq_2020.pdf" target="_blank"> Connecting Systems, Data, and People: A Multidiciplinary Research Roadmap for Chronic Disease management</a>, by Indranil Bardhan, Hsinchun Chen, and Elena Karahanna, 2020, MISQ</li>
+<li><a href="/courses/resources/misq_2020.pdf" target="_blank">Connecting Systems, Data, and People: A Multidiciplinary Research Roadmap for Chronic Disease management</a>, by Indranil Bardhan, Hsinchun Chen, and Elena Karahanna, 2020, MISQ</li>
+<li><a href="/courses/resources/Zhu_MISQ_2021.pdf" target="_blank">A Deep Learning Approach for Recognizing Activity of Daily Living (ADL) for Senior Care: Exploiting Interaction Dependency and Temporal Patterns</a>, by Hongyi Zhu, Sagar Samtani, Randall Brown, and Hsinchun Chen, June 2021, MISQ</li>
+<li><a href="/courses/resources/Yu_MISQ_2022.pdf" target="_blank">Wearable Sensor-based Chronic Condition Severity Assessment: An Adversarial Attention-based Deep Multisource Multitask Learning Approach</a>, by Shuo Yu, Yidong Chai, Hsinchun Chen, Scott Sherman, and Randall Brown, September 2022, MISQ</li>
 </ol>
 
 <li>Smart Business and Money</li>
@@ -87,7 +91,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011), IEEE IS</li>
 <li><a href="/courses/MIS510/ai_and_opinion_mining.pdf" target="_blank">AI and Opinion Mining</a>, by Hsinchun Chen and David Zimbra (May/June 2010), IEEE IS</li>
 <li><a href="/courses/resources/Qing_Survey_2018.pdf" target="_blank">Web Media and Stock Markets : A Survey and Future Directions from a Big Data Perspective</a>, by Qing Li, Yan Chen, Jun Wang, Yuanzhu Chen, and Hsinchun Chen, 2018, IEEE TKDE</li>
-<li><a href="/courses/resources/Qing_TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2020, IEEE TKDE</li>
+<li><a href="/courses/resources/Qing_TKDE_2020.pdf" target="_blank">A Multimodal Event-driven LSTM Model for Stock Prediction Using Online News</a>, by Qing Li, Jinghua Tan, Jun Wang, and Hsinchun Chen, 2021, IEEE TKDE</li>
 </ol>
 
 <li>Sports and Games Analytics</li>
