--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/uc_berkeley_data_science.pdf" target="_blank" style="color: #0077b3;">UC Berkeley’s Fastest-Growing Class Is Data Science 101</a>, by Douglas Belkin, WSJ, November 2, 2018</li>
 <li><a href="https://www.businessinsider.com/best-jobs-in-america-2019-1" target="_blank">The 50 Best Jobs in America for 2019</a> (<a href="https://www.glassdoor.com/List/Best-Jobs-in-America-LST_KQ0,20.htm" target="_blank">Glassdoor Ranking</a>), January 23, 2019.</li>
 <li><a href="/courses/resources/the_state_of_data_science_machine_learning_-_kaggle_2017_survey.pdf" target="_blank">The State of Data Science and Machine Learning - Kaggle Survey 2017</a>, 2017. [<a href="https://www.kaggle.com/surveys/2017" target="_blank">Interactive Online Version</a>]</li>
+<li><a href="/courses/resources/Davenport_HBR_2022.pdf" target="_blank">Is Data Scientist Still the Sexiest Job of the 21st Century?</a>, by Thomas Davenport, 2022, HBR</li>
 <li><a href="/courses/resources/misq_cybergate.ppt">CyberGate: A Design Framework and System for Text Analysis of CMC</a>, by Abbasi and Chen, 2008 - PPT</li>
 <li style="display: inline !important;"></li>
 <li><a href="/courses/resources/big_data_technology_-_hadoop_mapreduce_and_spark_190131.pptx">Big Data Technology - Hadoop, MapReduce, and Spark</a> (Jonathan Jiang, with updates from Sagar Samtani and Shuo Yu, 2019)</li>
