On branch master  Your branch is up to date with 'origin/master'.
 Uploading IEEE ISI papers from 2020, 2021

 Changes to be committed:
	modified:   index.html
	new file:   resources/Ampel_ISI_2020.pdf
	new file:   resources/Ampel_ISI_2021.pdf
	new file:   resources/Hu_ISI_2021.pdf
	new file:   resources/Lazarine_ISI_2020.pdf
	new file:   resources/Liu_ISI_2020.pdf
	new file:   resources/Liu_ISI_2021.pdf
	new file:   resources/Ullman_ISI_2020.pdf

--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/chenr_rsearch_template-2019.ppt" target="_blank">Template for Producing IT Research and Publication</a>, by Dr. Hsinchun Chen</li>
 <ol><li><a href="/courses/resources/ieee_format_2014_04_msw_a4_format.doc" target="_blank">IEEE Template</a> - Word Document</li>
 <li>IEEE Paper Examples</li>
-<ol><li><a href="/courses/resources/vb_threats_2015.pdf" target="_blank">Exploring Threats and Vulnerabilities in Hacker Web: Forums, IRC and Carding Shops</a>, by Benjamin et al., 2015, IEEE ISI</li>
-<li><a href="/courses/resources/vb_language_2015.pdf" target="_blank">Developing Understanding of Hacker Language through the use of Lexical Semantics </a>, by Benjamin and Chen, 2015, IEEE ISI</li>
-<li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a>, by Ebrahimi et al., 2018, IEEE ISI</li>
+<ol><li><a href="/courses/resources/reza_2018_detecting_cyber_threats_in_non-english_dark_net.pdf" target="_blank">Detecting Cyber Threats in Non-English Dark Net Markets: A Cross-Lingual Transfer Learning Approach</a>, by Ebrahimi et al., 2018, IEEE ISI</li>
 <li><a href="/courses/resources/ISI_DNM_collection.pdf" target="_blank">Identifying, Collecting, and Presenting Hacker Community Data: Forums, IRC, Carding Shops, and DNMs</a>, by Du et al., 2018, IEEE ISI</li>
+<li><a href="/courses/resources/Ampel_ISI_2020.pdf" target="_blank">Labeling Hacker Exploits for Proactive Cyber Threat Intelligence: A Deep Transfer Learning Approach</a>, by Benjamin Ampel, Sagar Samtani, Hongyi Zhu, Steven Ullman, and Hsinchun Chen, 2020, IEEE ISI</li>
+<li><a href="/courses/resources/Lazarine_ISI_2020.pdf" target="_blank">Identifying Vulnerable GitHub Repositories and Users in Scientific Cyberinfrastructure: An Unsupervised Graph Embedding Approach</a>, by Ben Lazarine, Sagar Samtani, Mark Patton, Hongyi Zhu, Steven Ullman, Benjamin Ampel, and Hsinchun Chen, 2020, IEEE ISI</li>
+<li><a href="/courses/resources/Liu_ISI_2020.pdf" target="_blank">Identifying, Collecting, and Monitoring Personally Identifiable Information: From the Dark Web to the Surface Web</a>, by Yizhi Liu, Fang Yu Lin, Zara Ahmad-Post, Mohammadreza Ebrahimi, Ning Zhang, James Lee Hu, Jingyu Xin, Weifeng Li, and Hsinchun Chen, 2020, IEEE ISI</li>
+<li><a href="/courses/resources/Ullman_ISI_2020.pdf" target="_blank">Smart Vulnerability Assessment for Scientific Cyberinfrastructure: An Unsupervised Graph Embedding Approach</a>, by Steven Ullman, Sagar Samtani, Ben Lazarine, Hongyi Zhu, Mark Patton, and Hsinchun Chen, 2020, IEEE ISI</li>
+<li><a href="/courses/resources/Ampel_ISI_2021.pdf" target="_blank">Distilling Contextual Embeddings Into A Static Word Embedding For Improving Hacker Forum Analytics</a>, by Benjamin Ampel and Hsinchun Chen, 2021, IEEE ISI</li>
+<li><a href="/courses/resources/Hu_ISI_2021.pdf" target="_blank">Single-Shot Black-Box Adversarial Attacks Against Malware Detectors: A Causal Language Model Approach</a>, by James Lee Hu, Mohammadreza Ebrahimi, and Hsinchun Chen, 2021, IEEE ISI</li>
+<li><a href="/courses/resources/Liu_ISI_2021.pdf" target="_blank">Automated PII Extraction from Social Media for Raising Privacy Awareness: A Deep Transfer Learning Approach</a>, by Yizhi Liu, Fang Yu Lin, Mohammadreza Ebrahimi, Weifeng Li, and Hsinchun Chen, 2021, IEEE ISI</li>
 </ol></ol>
 
 <li>Sample Research by Applications</a>, by Dr. Hsinchun Chen</li>
@@ -70,7 +75,8 @@ a:link,a:visited {
 <li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008, MISQ</li>
 <li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010, MISQ</li>
 <li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019, MISQ</li>
-<li><a href="/courses/resources/Ebrahimi_MISQ_2022.pdf" target="_blank">Cross-Lingual Cybersecurity Analytics in the International Dark Web with Adversarial Deep Representation Learning</a>, by Reza Ebrahimi, Yidong Chai, Sagar Samtani, and Hsinchun Chen, June 2022, MISQ</li>
+<li><a href="/courses/resources/Samtani_TOPS_2020.pdf" target="_blank">Proactively Identifying Emerging Hacker Threats from the Dark Web: A Diachronic Graph Embedding Framework (D-GEF)</a>, by Sagar Samtani, Hongyi Zhu, and Hsinchun Chen, 2020, ACM TOPS</li>
+<li><a href="/courses/resources/Ebrahimi_MISQ_2022.pdf" target="_blank">Cross-Lingual Cybersecurity Analytics in the International Dark Web with Adversarial Deep Representation Learning</a>, by Mohammadreza Ebrahimi, Yidong Chai, Sagar Samtani, and Hsinchun Chen, June 2022, MISQ</li>
 <li><a href="/courses/resources/Samtani_MISQ_2022.pdf" target="_blank">Linking Exploits from the Dark Web to Known Vulnerabilities for Proactive Cyber Threat Intelligence: An Attention-based Deep Structured Semantic Model</a>, by Sagar Samtani, Yidong Chai, and Hsinchun Chen, June 2022, MISQ</li>
 </ol>
 
