Adding industry articles (Economist, NYT, IEEE Spectrum) to Topic 4

--- a/index.html
+++ b/index.html
@@ -287,10 +287,21 @@ a:link,a:visited {
 <li><a href="/courses/resources/GPT3_Brown_2020.pdf" target="_blank">GPT-3</a> (Brown et al., NeurIPS, 2020)</li>
 <li><a href="/courses/resources/SimCLR_Chen_2020.pdf" target="_blank">SimCLR</a> (Chen et al., ICML, 2020)</li>
 <li><a href="/courses/resources/DALL-E_Ramesh_2021.pdf" target="_blank">DALL-E</a> (Ramesh et al., ICML, 2021)</li>
+<li>IEEE Spectrum, Special Report: <a href="/courses/resources/IEEE_Spectrum_Oct_2021.pdf" target="_blank">Why Is AI So Dumb?</a>, October 2021. Includes the following articles:</li>
+<ol><li>The Turbulent Past and Uncertain Future of AI, by Eliza Strickland</li>
+  <li>How Deep Learning Works, by Samuel K. Moore, David Schneider, & Eliza Strickland</li>
+  <li>How to Train an All-Purpose Robot, by Tom Chivers</li>
+  <li>7 Revealing Ways AIs Fail, by Charles Q. Choi</li>
+  <li>A Human in the Loop, by Rodney Brooks</li>
+  <li>Deep Learning's Diminishing Returns, by Neil C. Thompson, Kristjan Greenewald, Keeheon Lee, & Gabriel F. Manso</li>
+  <li>Deep Learning Goes to Boot Camp, by Evan Ackerman</li>
+</ol><li>The Economist, <a href="/courses/resources/BigTech_supersized_ambitions_The_Economist.pdf" target="_blank">Big Tech's Supersized Ambitions</a>, January 2022.</li>
 <li><a href="/courses/resources/Foundation_Models_Stanford_July_2022.pdf" target="_blank">Foundation Models</a> (Bommasani et al., Stanford, 2022)</li>
 <li><a href="/courses/resources/AI-enabled_Analytics_Bootcamp_WelcomeSlides.pptx" target="_blank">Introduction to AI-enabled Analytics Bootcamp</a> (Sagar Samtani 2022)</li>
 <li><a href="/courses/resources/AI-enabled_Analytics_Research_Bootcamp.pptx" target="_blank">Research Bootcamp: Conducting AI-enabled Analytics</a> (Sagar Samtani 2022)</li>
 <li><a href="/courses/resources/Samtani_Open_Source_Tools_Repository_for_AI-enabled_Analytics.pptx" target="_blank">AI-enabled Analytics: A Brief Overview and An Open-Source Tools Inventory</a> (Sagar Samtani 2022)</li>
+<li>The Economist, <a href="/courses/resources/World_That_BERT_Built_Economist_2022.pdf" target="_blank">The World that BERT Built</a>, June 2022.</li>
+<li>New York Times, <a href="/courses/resources/AI_NYT_Aug2022.pdf" target="_blank">AI is Getting Good. What Happens Next</a>, August 25, 2022.</li>
 </ol>
 
 <h3>TOPIC 5: Text Mining (Sentiment Analysis, Topic Modeling, Visualization)</h3>
