Editing page text for syllabi links.

--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -40,7 +40,7 @@ a:link,a:visited {
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS464/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Spring 2023 - Printable Syllabus copy and Course Outline</a></li>
+<ul><li><a href="/courses/MIS464/MIS_464_Syllabus_Spring_2023.doc" target="_blank">Printable Syllabus copy and Course Outline</a></li>
 <li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
