--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -35,7 +35,7 @@ a:link,a:visited {
 <font face="MiloWeb-Text">
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS611D/MIS_611D_Syllabus_Spring_2023.doc"  target="_blank">MIS 611D Spring 2023 - Printable Syllabus copy and Course Outline</a><a href="#outline"></a></li>
+<ul><li><a href="/courses/MIS611D/MIS_611D_Syllabus_Spring_2023.doc"  target="_blank">Printable Syllabus copy and Course Outline</a><a href="#outline"></a></li>
 <li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
