--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -23,7 +23,7 @@ a:link,a:visited {
 
       <div id="content" class="column" role="main">
         <a id="main-content"></a>
-                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 611-D, Topics in Data and Web Mining</font></h2>
+                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 611D, Topics in Data and Web Mining</font></h2>
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">
   <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/MIS611D/wordle1a3r5.png" width="1058" height="386" alt="" />  </div>
@@ -55,7 +55,7 @@ a:link,a:visited {
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 12:30PM-1:45PM, MCCL 430E <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!)
-<br />Class Web site: <a href="https://ailab-ua.github.io/courses/MIS611D">https://ailab-ua.github.io/courses/MIS611D</a> (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
+<br />Class Web site: <a href="https://ailab-ua.github.io/courses/MIS611D">https://ailab-ua.github.io/courses/MIS611D</a> (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Benjamin Ampel, <a href="mailto:bampel@arizona.edu">bampel@arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Steven Ullman, <a href="mailto:stevenullman@arizona.edu">stevenullman@arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at: <a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Artificial Intelligence: A Modern Approach</em>, by Russel &amp; Norvig, 3rd Edition, 2000, Prentice Hall</li>
