--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -23,7 +23,7 @@ a:link,a:visited {
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
         <a id="main-content"></a>
-                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464 “DATA ANALYTICS” - Spring 2020 (Updated for New UA Online Class after 3/19/2020)</font></h2>
+                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464 “DATA ANALYTICS” - Spring 2023</font></h2>
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">
   <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/MIS464/wordle496a.png" width="1058" height="386" alt="" />  </div>
