Removing links (<a href> tags) for old MIS 464 and 611D pages.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a:link,a:visited {
 
 <font face="MiloWeb-Text">
 
-  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for <a href="/courses/MIS464">MIS 464</a>, Data Analytics, and <a href="/courses/MIS611D">MIS 611D</a>, Topics in Data and Web Mining (Spring 2023)</h3>
+  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for MIS 464, Data Analytics, and MIS 611D, Topics in Data and Web Mining (Spring 2023)</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <h3>TOPIC 1: Introduction (MIS, CS, BI, Data Science)</h3>
 
