--- a/index.html
+++ b/index.html
@@ -323,8 +323,9 @@ a:link,a:visited {
  -->
 
 </ul><hr />
+<!-- COMMENTED OUT
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Class Page for MIS 464, Data Analytics</a>
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a> -->
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
 <p><span style="font-size: small;">Photo provided through courtesy of DARPA and available through <a href="https://commons.wikimedia.org/wiki/File:DARPA_Big_Data.jpg">Wikimedia Commons</a>.</span></p>
 </div></div></div>
