--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@ a:link,a:visited {
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for MIS 464, Data Analytics, and MIS 611D, Topics in Data and Web Mining (Spring 2023)</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
+<p><strong>Course Syllabi - Spring 2023</strong></p>
 <ul>
-  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus</a></li>
-  <li><a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.doc" target="_blank">MIS 611D Syllabus</a></li>
+  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_464_Syllabus_Spring_2023.pdf" target="_blank">here</a></li>
+  <li><a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.doc" target="_blank">MIS 611D Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.pdf" target="_blank">here</a></li>
 </ul>
 <h3>TOPIC 1: Introduction (MIS, CS, BI, Data Science)</h3>
 
