--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ a:link,a:visited {
 
 <ol>
 <li><a href="/courses/MIS611D/chen_mis_review_2021.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
+<li><a href="/courses/resources/Chen_SFS_AI_Panel_2023.pptx" target="_blank">Building the UArizona AZSecure Cybersecurity Program: Advancing Research and Education with "AI for Cybersecurity"</a>, by Dr. Hsinchun Chen (2023)</li>
 <li><a href="/courses/Advice" target="_blank"> Business Analytics Intellectual Landscape </a>, by Dr. Hsinchun Chen, 2020, <a href="/courses/resources/Analytics_Intellectual_Landscape_January_2020.pdf" target="_blank"> pdf version </a> </li>
 <li><a href="/courses/Curriculum" target="_blank">MIS Analytics Curriculum</a>, by Dr. Hsinchun Chen, 2020 <a href="/courses/resources/MIS_Analytics_Curriculum_January_2020.pdf" target="_blank"> pdf version </a></li>
 <li><a href="/courses/resources/History_and_Key_Events_of_AI_and_Data_Analytics.pdf" target="_blank"> History and Key Events of AI and Data Analytics </a> , by Dr. Hsinchun Chen, 2020</li>
