Adding CS H-Index link.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS611D/design-science-hchen.pdf" target="_blank">Design Science, Grand Challenges, and Societal Impacts</a>, by Hsinchun Chen<a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank">.</a> <em>Transactions on Management Information Systems</em>, Volume 2, Issue 1, pp. 1:1 - 1:10. [<a href="/courses/resources/chen-editorial-design-science.pdf" target="_blank">PDF copy here</a>]</li>
 <li><a href="/courses/MIS611D/chen_publications_2019.pdf" target="_blank">Journals, Conferences, and Funding Sources for MIS Researchers and Educators: A Resource Guide</a>, by Dr. Hsinchun Chen (Updated 2019)</li>
 <li><a href="/courses/h_index" target="_blank">The H-Index for MIS</a>, March 2022</li>
+<li><a href="https://web.cs.ucla.edu/~palsberg/h-number.html">The H-Index for Computer Science</a>, January 2023</li>
 <li><a href="http://web.cs.ucla.edu/~palsberg/h-number.html" target="_blank">The H-Index for Computer Science</a>, by Jens Palsberg, 2022</li>
 
 
