Updating index page for new Python overview slides - 2023.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/big_data_technology_-_hadoop_mapreduce_and_spark_190131.pptx">Big Data Technology - Hadoop, MapReduce, and Spark</a> (Jonathan Jiang, with updates from Sagar Samtani and Shuo Yu, 2019)</li>
 
 <li>Python Overview for Data Analytics</li>
-<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Mohammadreza Ebrahimi and Hsinchun Chen, 2020</li>
+<ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Benjamin Ampel and Steven Ullman, 2023</li>
 </ol>
 
 <li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
