Adding Python tutorial colab notebook links.

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ a:link,a:visited {
 
 <li>Python Overview for Data Analytics</li>
 <ol><li><a href="/courses/resources/PythonReview_1.pptx">Python for Data Analytics</a>, by Benjamin Ampel and Steven Ullman, 2023</li>
+  <li><a href="https://colab.research.google.com/drive/1nbMM0N7YHmut_nEG0i6Zdii4rFnTQRPo?usp=sharing" target="_blank">Python Tutorial - Colab Notebook 2023</a></li>
+  <li><a href="https://colab.research.google.com/drive/1dIBvmZ1Ih3Cexf5RHxvsWmk0t_Pco_gv?usp=sharing" target="_blank">Python Data Analytics Tutorial - Colab Notebook 2023</a></li>
 </ol>
 
 <li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
