Moving AZSecure Information Sheet link to end of MIS 464 syllabus line.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ a:link,a:visited {
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p><strong>Course Syllabi - Spring 2023</strong></p>
 <ul>
-  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_464_Syllabus_Spring_2023.pdf" target="_blank">here</a></li>
+  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_464_Syllabus_Spring_2023.pdf" target="_blank">here</a>  -- <a href="/courses/resources/SFS-SFI-Flyer-2023.pdf" target="_blank">AZSecure Cybersecurity Program Information Sheet, 2023</a></li>
   <li><a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.doc" target="_blank">MIS 611D Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.pdf" target="_blank">here</a></li>
 </ul>
 <h3>TOPIC 1: Introduction (MIS, CS, BI, Data Science)</h3>
 
 <ol>
 <li><a href="/courses/MIS611D/chen_mis_review_2021.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
-<li><a href="/courses/resources/Chen_SFS_AI_Panel_2023.pptx" target="_blank">Building the UArizona AZSecure Cybersecurity Program: Advancing Research and Education with "AI for Cybersecurity"</a>, by Dr. Hsinchun Chen (2023) -- <a href="/courses/resources/SFS-SFI-Flyer-2023.pdf" target="_blank">AZSecure Cybersecurity Program Information Sheet, 2023</a></li>
+<li><a href="/courses/resources/Chen_SFS_AI_Panel_2023.pptx" target="_blank">Building the UArizona AZSecure Cybersecurity Program: Advancing Research and Education with "AI for Cybersecurity"</a>, by Dr. Hsinchun Chen (2023)</li>
 <li><a href="/courses/Advice" target="_blank"> Business Analytics Intellectual Landscape </a>, by Dr. Hsinchun Chen, 2020, <a href="/courses/resources/Analytics_Intellectual_Landscape_January_2020.pdf" target="_blank"> pdf version </a> </li>
 <li><a href="/courses/Curriculum" target="_blank">MIS Analytics Curriculum</a>, by Dr. Hsinchun Chen, 2020 <a href="/courses/resources/MIS_Analytics_Curriculum_January_2020.pdf" target="_blank"> pdf version </a></li>
 <li><a href="/courses/resources/History_and_Key_Events_of_AI_and_Data_Analytics.pdf" target="_blank"> History and Key Events of AI and Data Analytics </a> , by Dr. Hsinchun Chen, 2020</li>
