--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:link,a:visited {
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p><strong>Course Syllabi - Spring 2023</strong></p>
 <ul>
-  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_464_Syllabus_Spring_2023.pdf" target="_blank">here</a>  -- <a href="/courses/resources/SFS-SFI-Flyer-2023.pdf" target="_blank">AZSecure Cybersecurity Program Information Sheet, 2023</a></li>
+  <li><a href="/courses/resources/MIS_464_Syllabus_Spring_2023.doc" target="_blank">MIS 464 Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_464_Syllabus_Spring_2023.pdf" target="_blank">here</a>  -- <a href="/courses/resources/SFS-SFI-Flyer-2023.pdf" target="_blank">AZSecure Cybersecurity Program Information Sheet 2023</a></li>
   <li><a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.doc" target="_blank">MIS 611D Syllabus (Word copy)</a>, PDF copy <a href="/courses/resources/MIS_611D_Syllabus_Spring_2023.pdf" target="_blank">here</a></li>
 </ul>
 <h3>TOPIC 1: Introduction (MIS, CS, BI, Data Science)</h3>
