--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ a:link,a:visited {
   <li><a href="https://colab.research.google.com/drive/1dIBvmZ1Ih3Cexf5RHxvsWmk0t_Pco_gv?usp=sharing" target="_blank">Python Data Analytics Tutorial - Colab Notebook 2023</a></li>
 </ol>
 
-<li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu, 2019)</li>
+<li><a href="/courses/resources/tableau_overview_and_example_ss_hz_updated.pptx">Tableau Overview and Publicly Available Data Sources</a> (Sagar Samtani and Hsinchun Chen, with updates from Hongyi Zhu and Steven Ullman, 2023)</li>
 <ol>
 <li><a href="/courses/resources/nfl_offensive_player_stats_1999-2013.xlsx">Sample NFL Dataset for Visualization</a></li>
 </ol>
