Adding CACM 2008 paper.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ a:link,a:visited {
 <li>Communications of the ACM (2011):</li>
 <ol><li><a href="/courses/MIS510/reflecting_on_the_darpa_red_balloon_challenge.pdf" target="_blank">Reflecting on the DARPA Red Balloon Challenge</a>, by John C. Tang et al. (April 2011)</li>
 <li><a href="/courses/MIS510/crowdsourcing_systems_on_the_world-wide_web.pdf" target="_blank">Crowdsourcing Systems on the World-Wide Web</a>, by Anhai Doan et al. (April 2011)</li>
+<li><a href="/courses/resources/Xu_Chen_CACM_2008.pdf" target="_blank">The Topology of Dark Networks</a>, by Jennifer Xu and Hsinchun Chen (October 2008)</li>
 </ol><li><a href="/courses/resources/netflix_recommender_system_tmis_2015.pdf" target="_blank">The Netflix Recommender System: Algorithms, Business Value, and Innovation</a> (Uribe and Hunt, 2015)</li>
 <li><a href="/courses/resources/recommender-systems-netflix.pdf" target="_blank">Matrix Factorization Techniques for Recommender Systems</a> (Koren, Bell, and Volinsky, 2009)</li>
 <li>Harvard Business Review (October 2012)</li>
