Adding Bloomberg patent war image to Topic 2

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ a:link,a:visited {
 <li>A different world</li>
 <li>Rules of the road</li>
 </ol>
+<li><a href="/courses/resources/bloomberg_patentwar.jpg" target="_blank">World (Patent) War - Bloomberg, 2012</a></li>
 <li><a href="/courses/resources/Cyber Threat Intelligence.pptx" target="_blank">Cyber Threat Intelligence</a>, by Sagar Samtani and Hsinchun Chen, 2019</li>
 <li><a href="/courses/resources/Privacy_Future.pptx" target="_blank"> Looking to the Future of Cybersecurity</a>, by Fang Yu Lin and Hsinchun Chen, 2019</li>
 
