Adding scikit-learn colab notebook link to Topic 3 number 7.

--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@ a:link,a:visited {
 <li><a href="/courses/resources/iris-train.arff">iris-trai</a>n, <a href="/courses/resources/iris-test.arff">iris-test</a>, <a href="/courses/resources/houses-train.arff">houses-train</a>, <a href="/courses/resources/houses-test.arff">houses-test</a></li>
 </ol>
 <li><a href="/courses/resources/Sk-Learn_Oct_2022.pptx">Scikit-Learn:An End-to-End Tutorial For Building Machine Learning Models in Python</a> (Benjamin Ampel and Hsinchun Chen, 2022)</li>
+<ol>
+<li><a href="https://colab.research.google.com/drive/1qFS9kBgyatJKAexZHXi997WpkdYWfKOT?usp=sharing">Scikit-Learn Colab Notebook</a></li>
+</ol>
 <li><a href="/courses/resources/10algorithms-08.pdf" target="_blank">Top 10 Algorithms in Data Mining</a> (PDF)</li>
 <li><a href="/courses/MIS510/16_id3.pdf" target="_blank">ID3 Handout</a></li>
 <li><a href="/courses/MIS510/17_bpnn.pdf" target="_blank">Backpropagation Neural Network Handout</a></li>
